add the property of file path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 task.maxCountOfTask=30
 
+#-------------------------executor-----------------------------
+file.path=d:\\tm_work\\
+file.expansion=json
+file.content=blablabla
 #--------------------------scheduler---------------------------
 #scheduler.fixed.rate=3000
 
-#--------------------------queries------------------------------
+#--------------------------queries-----------------------------
 performer.getAllPerformers=FROM Performer
 performer.getPerformersByType=FROM Performer p WHERE p.type=:type
 task.getAllTasks=FROM Task
